[package]
name = "parse_quote"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ["derive"] }
etherparse = "0.15.0"
nom = "7.1.3"
pcap-file = "2.0.0"

[dev-dependencies]
pretty_assertions = "1.4.0"

# Binary target
[[bin]]
name = "parse_quote"
path = "src/main.rs"

# Library target
[lib]
name = "parse_quote"
path = "src/lib.rs"
