[package]
name = "parse_quote"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
bincode = "1.3.3"
clap = { version = "4.5.17", features = ["derive"] }
etherparse = "0.15.0"
log = "0.4.22"
nom = "7.1.3"
pcap-file = "2.0.0"
serde = { version = "1.0.210", features = ["derive"] }
simple_logger = "5.0.0"
time = "0.3.36"

[dev-dependencies]
pretty_assertions = "1.4.0"

# Binary target
[[bin]]
name = "parse_quote"
path = "src/main.rs"

# Library target
[lib]
name = "parse_quote"
path = "src/lib.rs"
